# BeanBot

./: .gitignore  Dockerfile  LICENSE  README.md  audio.py  compose.yml  docker-compose.yml  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: colors.txt  day.txt  meals.txt  textures.txt
beanbot/: __init__.py  __main__.py  banner.txt  bot.py  checks.py  config.py  constants.py  errors.py  menus.py
beanbot/ext/: ai.py  audio.py  commands.py  fun.py  info.py  misc.py  mod.py  nutella.py
configs/beanbot/: application.yaml
configs/lavalink/: application.yml
src/beanbot/: __about__.py  __init__.py  __main__.py  bot.py  checks.py  config.py  errors.py  menus.py
src/beanbot/ext/: ai.py  audio.py  commands.py  fun.py  info.py  misc.py  mod.py
src/deprecated/ext/: info.py  misc.py
